monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4090/A4090k.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4090;

grammar A4090k {

  A = "a";
  B = A a:"Tom";

}
